--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     scroll-behavior: smooth;
   }
 
+  a {
+      text-decoration: none;
+  }
+
 .header {
     background-color: red;
     display: flex;
@@ -131,6 +135,7 @@ body {
 
 .box-card-info p {
     padding: 20px;
+    
 }
 
 .box-wrap {
@@ -209,7 +214,8 @@ footer {
 .social-icons {
     display: flex;
     justify-content: center;
-    align-items: center;   
+    align-items: center;
+    margin-bottom: 20px;   
 }
 
 .social-icons i {
@@ -232,10 +238,12 @@ footer {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 0px;
 }
 
 .h-class{
     font-size: 50px;
+    margin-bottom: 0px;
 }
 
 #contact-wrapper span {
@@ -245,11 +253,53 @@ footer {
 .info-contact-section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 90%;
+    align-items: flex-start;
     margin: 30px 0px;
 }
 
-.adress-section {
+.info-contact-section i,
+.info-contact-section p,
+.info-contact-section a {
+    color: gold;
+    font-size: 30px;
+}
 
+.mail-section {
+    text-decoration: none;
+    
+}
+
+.mail-section a {
+    margin-left: 10px;
+    transition: 0.5s;
+}
+
+.mail-section a:hover {
+    margin-left: 30px;
+}
+
+.mail-section i:hover {
+    animation: spin 1s ease-in-out infinite both;
+}
+
+
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.adress-section p {
+    font-size: 15px;
+    
+}
+
+.adress-section h3 {
+    color: gold;
+    
 }
