--- a/css/style.css
+++ b/css/style.css
@@ -84,18 +84,22 @@ body {
 
 #main-mp4-section video {
     width: 100%;
-    height: calc(100vh - 80px);
+    height: 100vh;
     margin-top: 80px;
     object-fit: cover;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    z-index: -9999;
     
 }
 
 .text-over-video {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: calc(100vh - 50px);
     margin-top: 50px;
-    background-color: rgba(0, 0, 0, 0.3);
+    
     display: flex;
     flex-direction: column;
     align-items: center;
