--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a:link {
     position: fixed;
     z-index: 1;
     width: 100%;
-    border-bottom: 5px solid white;
+    border-bottom: 5px solid gold;
 }
 
 #header h1 {
@@ -415,3 +415,96 @@ footer {
     top: 0;
     font-size: 50px;
 }
+
+/*Start Service page */
+#home-section {
+    position: relative;
+    width: 100%;
+    
+}
+
+#home-section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-top: 50px;
+}
+
+.home-image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.home-image-overlay h1 {
+    color: white;
+    font-size: 20px;
+}
+
+.home-image-overlay a {
+    text-decoration: none;
+    color: white;
+    background-color: transparent;
+    padding: 10px 20px;
+    border: 2px solid white;
+    font-size: 20px;
+}
+
+.home-image-overlay a:hover {
+    background-color: white;
+    color: black;
+}
+
+.column-card-info {
+    width: 200px;
+    height: 50vh;
+    float: left;
+    background-color: wheat;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.16) 0px 3px 6px;
+    margin: 10px;
+    margin-left: 50px;
+    margin-bottom: 200px;
+    border-radius: 20px;
+    transition: all 0.5s ease 0s;
+    
+}
+
+.column-card-info:hover {
+    transform: scale(1.01);
+    cursor: pointer;
+}
+
+.column-card-info p {
+    padding: 10px;
+    overflow: auto;
+    height: 30vh;
+    
+}
+
+.column-wrap {
+    width: 100%;
+    background-color: rgb(248, 162, 3);
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    height: 20%;
+    
+}
+
+#services-section {
+    margin-top: 150px;
+}
+
+
+/*End Service page */
